# polars-cactus

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: expressions.rs  lib.rs
src/polars_cactus/: __init__.py  _core.pyi
src/tools/: arrays.rs  card_and_repr.rs  mod.rs
tests/: test_cactus.py  test_polars.py
