[package]
name = "polars_example"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "*", features = ["dtype-struct"] }
pyo3 = { version = "*", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "*", features = ["derive", "dtype-struct"] }
